#
# if Install hangs, then remove folder:  /home/mgiadmin/.cache/pip and try again
#
#
TAG: pwi-6-0-26-14
DATE: 12/03/2025
STAFF: lec
wts2-1767/sprt-148/PWI/ArrayExpress URL has changed
        modified:   pwi/static/app/edit/gxd/gxd_ht_results_content.html

TAG: pwi-6-0-26-13
DATE: 11/26/2025
STAFF: lec
wts2-1761/sprt-137/reference summary not always providing links to existing J file
        modified:   pwi/static/app/edit/referencesummary/referencesummary_content.html

TAG: pwi-6-0-26-12
DATE: 11/21/2025
STAFF: lec
wts2-1759/sprt-133/tiny tweaks to probes (help text) and strain (tabbing)
        modified:   pwi/static/app/edit/probe/help.html
        modified:   pwi/static/app/edit/strain/strain_content.html

TAG: pwi-6-0-26-11
DATE: 11/10/2025
STAFF: lec
wts2-1750/Nutanix Migration
change SERVER_PORT=5050
        modified:   Configuration.default

STAFF: lec
TAG: pwi-6-0-26-10
DATE: 10/30/2025
STAFF: lec
wts-1751/sprt-111/Lit Triage Module: line coloring off in Status Table

TAG: pwi-6-0-26-9
DATE: 10/24/2025
STAFF: lec
wts2-1743/sprt-94/Remove PRO lit triage workflow

TAG: pwi-6-0-26-8
TAG: pwi-6-0-26-7
TAG: pwi-6-0-26-6
DATE: 10/23/2025
STAFF: lec
wts2-1746/sprt-105/PWI EMAPA Browser: add count of HT samples
wts2-1748/sprt-106/PWI CL Browser: add count of HT samples
        modified:   pwi/static/app/edit/emapa/emapa_browser_content.html
        modified:   pwi/static/app/edit/celltype/celltype_browser_content.html

TAG: pwi-6-0-26-5
TAG: pwi-6-0-26-4
DATE: 10/16/2025
STAFF: lec
wts2-1743/sprt-94/Remove PRO lit triage workflow
        modified:   pwi/static/app/edit/triage/help.html
        modified:   pwi/static/app/edit/triage/lit_triage_content.html

TAG: pwi-6-0-26-3
DATE: 09/25/2025
STAFF: lec
wts2-1726/sprt-68/Marker Module Regulates Expression paste function not working
        modified:   pwi/static/app/edit/markerfear/MarkerFearController.js

TAG: pwi-6-0-26-2
DATE: 09/04/2025
STAFF: lec