@@ -297,11 +297,14 @@
         <div class="row">
         <div class="col-sm-8" style=""> 
                 <div class="row">
-                        <div class="col-sm-12" style="">
+                        <div class="col-sm-6" style="">
                         <button type="button" style="float:left;" tabindex="-1" id="addreferenceRow-{{$index}}"
                                 ng-class=""
                                 ng-click="addRefRow()" >Add Row</button>
-                        </div>
+			</div>
+                   	<div class="col-sm-2" style="float:right;">
+                        <label class="label label-view-only">References</label>{{vm.refCount}}
+		        </div>
                 </div>
                 <div id="referenceTableWrapper" overflow-y: scroll;" >
                 <table class="table table-bordered scrollable-menu" id="referenceTable" style="">
